[package]
name = "epics"
description = "A dApp framework - Build Fast and Focus Your Business Logic."
license = "Apache-2.0"
version = "0.1.0"
authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
